--- a/language-configuration.json
+++ b/language-configuration.json
@@ -1,9 +1,7 @@
 {
     "comments": {
-        // symbol used for single line comment. Remove this entry if your language does not support line comments
-        "lineComment": "//",
-        // symbols used for start and end a block comment. Remove this entry if your language does not support block comments
-        "blockComment": [ "/*", "*/" ]
+        "lineComment": "--",
+        "blockComment": [ "{-", "-}" ]
     },
     // symbols used as brackets
     "brackets": [
@@ -13,18 +11,16 @@
     ],
     // symbols that are auto closed when typing
     "autoClosingPairs": [
+        ["{{", "}}"],
         ["{", "}"],
         ["[", "]"],
         ["(", ")"],
-        ["\"", "\""],
-        ["'", "'"]
     ],
     // symbols that can be used to surround a selection
     "surroundingPairs": [
+        ["{{", "}}"],
         ["{", "}"],
         ["[", "]"],
         ["(", ")"],
-        ["\"", "\""],
-        ["'", "'"]
     ]
 }
