--- a/package.json
+++ b/package.json
@@ -1,45 +1,48 @@
 {
-    "name": "vehicle-syntax-highlighting",
-    "displayName": "Vehicle Syntax Highlighting",
-    "description": "Syntax Highlighting for Vehicle",
-    "version": "0.0.1",
-    "engines": {
-        "vscode": "^1.69.0"
-    },
-    "categories": [
-        "Programming Languages"
-    ],
-    "contributes": {
-        "languages": [
-            {
-                "id": "vehicle",
-                "aliases": [
-                    "Vehicle",
-                    "vehicle"
-                ],
-                "extensions": [
-                    ".vcl"
-                ],
-                "configuration": "./language-configuration.json"
-            }
+  "name": "vehicle-syntax-highlighting",
+  "displayName": "Vehicle Syntax Highlighting",
+  "description": "Syntax Highlighting for Vehicle",
+  "version": "0.0.1",
+  "engines": {
+    "vscode": "^1.69.0"
+  },
+  "categories": [
+    "Programming Languages"
+  ],
+  "contributes": {
+    "languages": [
+      {
+        "id": "vehicle",
+        "aliases": [
+          "Vehicle",
+          "vehicle"
         ],
-        "grammars": [
-            {
-                "language": "vehicle",
-                "scopeName": "source.vehicle",
-                "path": "./syntaxes/vehicle.tmLanguage.json"
-            }
-        ]
-    },
-    "scripts": {
-        "build": "npx js-yaml ./syntaxes/vehicle.tmLanguage.yml > ./syntaxes/vehicle.tmLanguage.json",
-        "test": "npm run test-unit && npm run test-snap",
-        "test-unit": "vscode-tmgrammar-test 'tests/**/*.test.vcl'",
-        "test-snap": "vscode-tmgrammar-snap 'tests/snap/**/*.vcl'",
-        "test-snap-update": "vscode-tmgrammar-snap --updateSnapshot 'tests/snap/**/*.vcl'"
-    },
-    "devDependencies": {
-        "js-yaml": "^4.1.0",
-        "vscode-tmgrammar-test": "^0.1.1"
-    }
+        "extensions": [
+          ".vcl"
+        ],
+        "configuration": "./language-configuration.json"
+      }
+    ],
+    "grammars": [
+      {
+        "language": "vehicle",
+        "scopeName": "source.vehicle",
+        "path": "./syntaxes/vehicle.tmLanguage.json"
+      }
+    ]
+  },
+  "scripts": {
+    "pretest": "npm run build",
+    "prepublish": "npm run build",
+    "vscode:prepublish": "npm run build",
+    "build": "npx js-yaml ./syntaxes/vehicle.tmLanguage.yml > ./syntaxes/vehicle.tmLanguage.json",
+    "test": "npm run test-tmgrammar && npm run test-tmgrammar-snap",
+    "test-tmgrammar": "vscode-tmgrammar-test 'tests/**/*.test.vcl'",
+    "test-tmgrammar-snap": "vscode-tmgrammar-snap 'tests/snap/**/*.vcl'",
+    "test-tmgrammar-snap-update": "vscode-tmgrammar-snap --updateSnapshot 'tests/snap/**/*.vcl'"
+  },
+  "devDependencies": {
+    "js-yaml": "^4.1.0",
+    "vscode-tmgrammar-test": "^0.1.1"
+  }
 }
